admission/ValidatingAdmissionPolicy/policies/poststart-httpget-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poststart-httpget-host-containers
  annotations:
    kubeapt.io/uuid: "8aac94da-b019-408f-909d-edc75587c2f9"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    lifecycle:
      postStart:
        httpGet:
          path: /
          port: 80
          host: 127.0.0.1
